syntax = "proto2";

package com.google.cloud.bigquery.storage.test;

import "type_annotation.proto";

message SupportedTypes {
  optional int32 int32_value = 1;
  optional int64 int64_value = 2;
  optional uint32 uint32_value = 3;
  optional uint64 uint64_value = 4;
  optional fixed32 fixed32_value = 7;
  optional fixed64 fixed64_value = 8;
  optional sfixed32 sfixed32_value = 9;
  optional sfixed64 sfixed64_value = 10;
  optional float float_value = 11;
  optional double double_value = 12;
  optional bool bool_value = 13;
  optional bytes bytes_value = 14;
  optional string string_value = 15;
}

message NonSupportedTypes {
  optional sint32 sint32_value = 5;
  optional sint64 sint64_value = 6;
}

message NonSupportedOneof {
  oneof oneof_value {
     string test1 = 1;
     string test2 = 2;
  }
}

message SupportedNestingLvl1 {
  optional SupportedTypes test_supported = 1;
  optional SupportedNestingLvl2 nesting_value = 2;
}

message SupportedNestingLvl2 {
  optional SupportedNestingLvl3 nesting_value = 1;
}

message SupportedNestingLvl3 {
  optional SupportedTypes test_supported = 1;
}

message NonSupportedMap {
  map<int32, int32> map_value = 1;
}

message NonSupportedNestingLvl1 {
  optional int32 int_value = 1;
  optional NonSupportedNestingLvl1 nesting_value = 2;
}

message NonSupportedNestingLvl2 {
  optional int32 int_value = 1;
  optional NonSupportedNestingLvl1 nesting_value = 2;
}

message NonSupportedNestingLvl2_1 {
  optional int32 int_value = 1;
  optional NonSupportedNestingLvl1 nesting_value = 2;
  optional NonSupportedNestingLvl1 nesting_value2 = 3;
}

message AllFieldModes {
  optional bool optional_mode = 1;
  required bool required_mode = 2;
  repeated bool repeated_mode = 3;
}

message TestExtensions {
  required int32 extension_test = 1  [ (zetasql.format)=DATE ];
  required int32 no_extension = 2;
}
